# Yaplingo_Sunny

./: LICENSE.txt  README.md
app/: .gitignore  app.json  eslint.config.js  package-lock.json  package.json  prettier.config.js  tailwind.config.js  tsconfig.json
app/src/: store.ts  utils.ts
app/src/app/: _layout.tsx
app/src/app/(account)/: _layout.tsx  index.tsx  login.tsx  register.tsx
app/src/app/main/: _layout.tsx  community.tsx  index.tsx  profile.tsx
app/src/app/main/learn/: _layout.tsx  chat.tsx  index.tsx  yap.tsx
app/src/app/main/learn/echo/: _layout.tsx  index.tsx
app/src/client/: index.ts  models.ts
app/src/components/: Button.tsx  Heatmap.tsx  Meter.tsx  Progress.tsx  Spinner.tsx  Text.tsx  TextInput.tsx  Tooltip.tsx  index.ts
app/src/hooks/: index.ts  useFormReducer.ts  useNavigationOptions.ts
server/: .gitignore  Dockerfile  compose.yaml  pyproject.toml
server/server/: dependencies.py  main.py  schemas.py  settings.py  utils.py
server/server/core/: __init__.py  levenshtein.py  textspeech.py
server/server/core/generators/: __init__.py  feedback.py  transcript.py
server/server/core/generators/prompts/: feedback.md  transcript.md
server/server/core/pipeline/: __init__.py  aligner.py  processor.py
server/server/repository/: __init__.py  models.py  settings.py
server/server/routers/: auth.py  echo.py
server/server/store/: __init__.py  settings.py
